# Scratch

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Hl1BspData.cpp  Hl1BspData.h  Hl1DataManager.cpp  Hl1DataManager.h  Json.cpp  Json.h  README.md  Shader.cpp  Shader.h  SpacePartitioner.cpp  SpacePartitioner.h  StaticGeometry.cpp  StaticGeometry.h  SunShadows.cpp  SunShadows.h  Tracer.cpp  Tracer.h  glad.c  hl1types.h  indexarray.h  lightmap.cpp  lightmap.h  main.cpp  stb_truetype.cpp  stb_truetype.h  texture.cpp  texture.h  uiFont.cpp  uiFont.h  vector3.cpp  vector3.h  visibility.cpp  visibility.h
assets/: fragment.shader  vertex.shader
include/glad/: glad.h
